# ode-cuda

./: .gitignore  avg.sh  configure-osx  dimtest.sh  iter.sh  plan.txt  scratchpad
include/ode/: Makefile.am  cuda_demo_helper.h  cuda_helper.h  cuda_matrix.h  cuda_mltstep.h  cuda_step.h  ode.h
ode/demo/: Makefile.am  cuda_demo_ode.cpp  demo_ode.cpp  demo_step_stripped.cpp  fat_matrix.cpp
ode/src/: Makefile.am  cuPrintf.cu  cuda_demo_helper.cu  cuda_helper.cu  cuda_matrix.cu  cuda_mltstep.cpp  cuda_step.cu  cuda_util.cu  cuda_util.h  lcp.cpp  matrix.cpp  objects.h
ou/: configure.ac
