libode_la_includedir = $(includedir)/ode
libode_la_include_HEADERS = 	collision_trimesh.h \
				mass.h \
				odecpp.h \
				common.h \
				matrix.h \
				odecpp_collision.h \
				compatibility.h \
				memory.h \
				contact.h \
				misc.h \
				odemath.h \
				odeinit.h \
				collision.h \
				error.h \
				objects.h \
				rotation.h \
				collision_space.h \
				export-dif.h \
				ode.h  \
				timer.h \
				odeconfig.h \
				cuda_matrix.h \
				cuPrintf.cuh \
				cuda_helper.h \
				cuda_demo_helper.h

EXTRA_DIST = README
